wip: refactors
